--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 
     "require": {
         "php": ">=5.3.0",
-        "emagister/zend-form-decorators-bootstrap": "dev-bootstrap3"
+        "emagister/zend-form-decorators-bootstrap": "dev-master"
     },
 
     "autoload": {
