--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     }],
 
     "require": {
-        "php": ">=5.3.0",
-        "emagister/zend-form-decorators-bootstrap": "dev-master"
+        "php": ">=5.3.0"
     },
 
     "autoload": {
